--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bootstrap": "^4.6.0",
+    "bulma": "^0.9.2",
     "react": "^17.0.1",
+    "slim": "^0.11.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
