--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@rails/webpacker": "5.2.1",
     "bootstrap": "^4.6.0",
     "bulma": "^0.9.2",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "slim": "^0.11.0",
     "turbolinks": "^5.2.0"
